--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,13 @@
+Thu Mar 13 10:47:21 2003  Tim Janik  <timj@gtk.org>
+
+	* bsemixer.c (bse_mixer_class_init): 
+	* bsesimpleadsr.c (bse_simple_adsr_init): 
+	* bsesequencer.c (bse_sequencer_class_init): 
+	* bseatandistort.c (bse_atan_distort_class_init): 
+	* bseiirfilter.c (bse_iir_filter_class_init): add SFI_PARAM_FLOAT for
+	Real properties which are stored in floats 'cause they don't need
+	full double precision.
+
 Mon Mar 10 11:22:48 2003  Tim Janik  <timj@gtk.org>
 
 	* freeverb/bsefreeverb.c: 
