--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Thu Mar 13 15:54:28 2003  Tim Janik  <timj@gtk.org>
+
+	* configure.in: applied patch from Junichi Uekawa <dancer@debian.org>
+	which provides --enable-devdsp and --enable-devmidi options to force
+	driver builds for these devices, bypassing auto-detection.
+
+	* beast-gtk/bsttrackview.c (bst_track_view_create_tree): fix synthesizer
+	column.
+
+	* beast-gtk/gxk/gxktexttools.[hc] (gxk_scroll_text_create): adjust
+	default values and possible flag sets.
+
+	* beast-gtk/*.c: fixed callers of gxk_scroll_text_create().
+
 Tue Mar 11 06:46:19 2003  Tim Janik  <timj@gtk.org>
 
 	* configure.in: up version to 0.5.0-rc1, released rc tarball.
