--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 13 21:30:14 2003  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am (gslincludedir): install gsl headers under bse/.
+
 Thu Mar 13 21:13:33 2003  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-oss.c (bse_pcm_device_oss_open): if opening in read-write
