--- a/README
+++ b/README
@@ -39,9 +39,8 @@ The official ftp site for BEAST/BSE is:
 The official web site for BEAST/BSE is:
   http://beast.gtk.org/
 
-And finally there's a mailing list as well:
-  beast@beast.gtk.org
-send an email to timj@beast.gtk.org to get subscribed.
+And finally there's a mailing list as well (beast@gnome.org):
+  http://mail.gnome.org/mailman/listinfo/beast/
 
 Installation
 ============
