--- a/docs/site-contact.texi
+++ b/docs/site-contact.texi
@@ -11,8 +11,7 @@
 @unnumbered Mailing List
 
 A mailing list (pretty low volume) is available at
-@uref{mailto://beast@@beast.gtk.org}.  Send an email to
-@uref{mailto://timj@@beast.gtk.org} to get subscribed.
+@uref{http://mail.gnome.org/mailman/listinfo/beast/}.
 
 @unnumbered Contacts
 
