--- a/docs/site-links-related.texi
+++ b/docs/site-links-related.texi
@@ -11,6 +11,7 @@
 @itemize
 @item @uref{http://www.arts-project.org,, aRts - analog Realtime Synthesizer}
 @item @uref{http://www.gstreamer.net,, GStreamer - Media Component Framework}
+@item @uref{http://www.ladspa.org,, LADSPA - LAD Simple Plugin API}
 @item @uref{http://www.glame.de,, GLAME - GNU/Linux Audio Mechanics}
 @item @uref{http://www.xiph.org/ogg/vorbis/,, Ogg/Vorbis - Open Audio Codec}
 @item @uref{http://www.mars.org/home/rob/proj/mpeg/,, MAD - MPEG Audio Decoder}
