--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -78,6 +78,7 @@ Selected @uref{http://www.sospubs.co.uk,,Sound On Sound} Articles:
 	@uref{http://www.sospubs.co.uk/sos/jul02/articles/synthsecrets0702.asp,,Part39}
 	@uref{http://www.sospubs.co.uk/sos/aug02/articles/synthsecrets0802.asp,,Part40}
 	@uref{http://www.sospubs.co.uk/sos/sep02/articles/synthsecrets09.asp,,Part41}
+	@uref{http://www.sospubs.co.uk/sos/oct02/articles/synthsecrets10.asp,,Part42}
 @end itemize
 
 
