--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Overview of Changes in BEAST/BSE 0.5.1:
 
+* Improved synthesis network router display
 * Fixed memory leaks during plaback.
 
 Overview of Changes in BEAST/BSE 0.5.0:
