--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Overview of Changes in BEAST/BSE 0.5.1:
 
 * Improved synthesis network router display
+* Added support for LADSPA plugins
 * Fixed memory leaks during plaback.
 
 Overview of Changes in BEAST/BSE 0.5.0:
